feat: parameter visitor?